tests/snapshots/transactions/build/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - build
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <PUBLIC_KEY>
  <TO_ADDR>
  <AMOUNT>

Usage: kermit transactions build <PUBLIC_KEY> <TO_ADDR> <AMOUNT>

For more information, try '--help'.
