tests/snapshots/transactions/build/one_param.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - build
    - 02ff46d897b529927bd1006cf75fb9e005d4f47181ec37db9dc82548218ff88106
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TO_ADDR>
  <AMOUNT>

Usage: kermit transactions build <PUBLIC_KEY> <TO_ADDR> <AMOUNT>

For more information, try '--help'.
